<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlertInfoActivity"
    >

    <LinearLayout
        android:id="@+id/llReminder"
        style="@style/settings_item_layout">

        <TextView
            android:id="@+id/tv_reminder_header"
            style="@style/settings_header"
            android:text="@string/sett_reminder_header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_reminder_label"
                style="@style/settings_sub_header"
                android:text="@string/sett_reminder_label" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/timerSwitch"
                android:theme="@style/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_reminder_desc"
            style="@style/settings_details"
            android:paddingTop="@dimen/items_top_padding"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:text="@string/sett_reminder_desc" />

        <LinearLayout
            android:id="@+id/ll_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_reminder_time_label"
                    style="@style/settings_sub_header"
                    android:text="@string/sett_reminder_time_label" />

                <ImageView
                    android:id="@+id/iv_timer"
                    android:layout_width="@dimen/timer_icon"
                    android:layout_height="@dimen/timer_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_timer" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_reminder_time_desc"
                style="@style/settings_details"
                android:paddingTop="@dimen/items_top_padding"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:text="@string/sett_reminder_time_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_set_time2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_reminder_time_label2"
                    style="@style/settings_sub_header"
                    android:text="@string/set_Ins_reminder_time_level" />

                <ImageView
                    android:id="@+id/iv_timer2"
                    android:layout_width="@dimen/timer_icon"
                    android:layout_height="@dimen/timer_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_timer" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_reminder_time_desc2"
                style="@style/settings_details"
                android:paddingTop="@dimen/items_top_padding"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:text="@string/sett_reminder_time_content" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>