<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frgGlucose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".glucoseFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/glucosepageTitle"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    <EditText
        android:id="@+id/etTestingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/testingdatefieldhint"
        android:inputType="date"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    <EditText
        android:id="@+id/etGlucoseDose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/glucosefieldhint"
        android:inputType="numberDecimal"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnGlucoseSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:text="@string/glucsebutton"
        android:textAlignment="center"
        android:textColor="@android:color/white" />
</android.support.v7.widget.LinearLayoutCompat>