<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".insulinFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/insulinpagetitle"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPredictedInsulin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorHighlight"
        android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/etInsulinDose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/insulinfieldhint"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
        <Button
        android:id="@+id/btnInsulinSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:text="@string/insulinbutton"
        android:textAlignment="center"
        android:textColor="@android:color/white"
    />


</android.support.v7.widget.LinearLayoutCompat>